// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContextMenu > renders with class correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="min-w-96">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with custom slot correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with default slot correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Default slot</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with descriptionKey correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with disabled correctly 1`] = `
"<span data-state="closed" data-disabled="" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->




<!---->




<!--teleport end-->"
`;

exports[`ContextMenu > renders with externalIcon correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with item slot correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->




<div data-akar-popper-content-wrapper="" style="position: fixed; left: 0px; top: 0px; transform: translate(0, -200%); min-width: max-content;">
  <div role="menu" aria-orientation="vertical" data-akar-menu-content="" data-state="open" dir="ltr" tabindex="-1" data-orientation="vertical" style="--akar-context-menu-content-transform-origin: var(--akar-popper-transform-origin); --akar-context-menu-content-available-width: var(--akar-popper-available-width); --akar-context-menu-content-available-height: var(--akar-popper-available-height); --akar-context-menu-trigger-width: var(--akar-popper-anchor-width); --akar-context-menu-trigger-height: var(--akar-popper-anchor-height); animation: none; outline-color: none; outline-style: none; outline-width: initial;" data-dismissable-layer="" data-slot="content" data-side="right" data-align="start">
    <div role="presentation" data-slot="viewport" class="">
      <div role="group" aria-labelledby="akar-menu-group-v-0" data-slot="group" class=""><button role="menuitem" tabindex="-1" id="akar-menu-sub-trigger-v-1" aria-haspopup="menu" aria-expanded="false" aria-controls="" data-state="closed" type="button" data-slot="item" class="" data-akar-collection-item="">Item slot</button>
        <!---->
        <!--teleport start-->
        <!---->
        <!--teleport end-->
      </div>
      <div role="group" aria-labelledby="akar-menu-group-v-2" data-slot="group" class=""><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item slot</button><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item slot</button><button type="button" disabled="" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="" aria-disabled="true" data-disabled="">Item slot</button></div>
      <div role="group" aria-labelledby="akar-menu-group-v-3" data-slot="group" class=""><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item slot</button><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item slot</button><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item slot</button>
        <div role="separator" aria-orientation="horizontal" data-slot="separator" class=""></div><button role="menuitem" tabindex="-1" id="akar-menu-sub-trigger-v-4" aria-haspopup="menu" aria-expanded="false" aria-controls="" data-state="closed" type="button" data-slot="item" class="" data-akar-collection-item="">Item slot</button>
        <!---->
        <!--teleport start-->
        <!---->
        <!--teleport end-->
      </div>
      <div role="group" aria-labelledby="akar-menu-group-v-5" data-slot="group" class=""><a href="https://github.com/vinicunca/pohon" role="menuitem" tabindex="-1" rel="noopener noreferrer" target="_blank" data-slot="item" data-akar-collection-item="">Item slot</a></div>
    </div>
  </div>
</div>




<!--teleport end-->"
`;

exports[`ContextMenu > renders with item-description slot correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with item-label slot correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with item-leading slot correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with item-trailing slot correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with items correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with items with description correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with labelKey correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with pohon correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with size lg correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with size md correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with size sm correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with size xl correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders with size xs correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;

exports[`ContextMenu > renders without externalIcon correctly 1`] = `
"<span data-state="open" style="pointer-events: auto;" class="">Right Click</span>
<!--teleport start-->








<!--teleport end-->"
`;
